--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,12 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Zhongyu Yang"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "杨忠裕"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+url                      : https://01yzzyu.github.io/yzzyu.github.io/
+repository               : "https://01yzzyu.github.io/yzzyu.github.io/"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -22,19 +21,19 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  name             : "Zhongyu Yang"
+  bio              : "Student of School of Mathematics and Statistics , Lanzhou University "
+
+  location         : "Lanzhou , Gansu , China"
+  employer         : "Lanzhou  University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "yangzhy21@lzu.edu.cn" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  #arxiv            : # URL - Update with the correct link to your profile
+  googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=x2VGVvcAAAAJ"
+ # impactstory      : # URL
+  orcid            : "https://orcid.org/0009-0003-0190-8256"
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
 
