--- a/_config.yml
+++ b/_config.yml
@@ -8,32 +8,33 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Zhongyu Yang"
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "杨忠裕"
+name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://01yzzyu.github.io/yzzyu.github.io/
-repository               : "https://01yzzyu.github.io/yzzyu.github.io/"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
+repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "IMG_9276.png"
-  name             : "Zhongyu Yang"
-  bio              : "Student of School of Mathematics and Statistics , Lanzhou University "
-
-  location         : "Lanzhou , Gansu , China"
-  employer         : "Lanzhou  University"
+  avatar           : "profile.png"
+  name             : "Your Sidebar Name"
+  pronouns         : # example: "she/her"  
+  bio              : "Short biography for the left-hand sidebar"
+  location         : "Earth"
+  employer         : "Red Brick University"
   uri              : # URL
-  email            : "yangzhy21@lzu.edu.cn" 
+  email            : "none@example.org" 
 
   # Academic websites
-  #arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=x2VGVvcAAAAJ"
- # impactstory      : # URL
-  orcid            : "https://orcid.org/0009-0003-0190-8256"
+  arxiv            : # URL - Update with the correct link to your profile
+  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  impactstory      : # URL
+  orcid            : "http://orcid.org/yourorcidurl"
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
 
