--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,25 @@ title                    :  "Zhongyu Yang"
 title_separator          : "-"
 name                     : &name "杨忠裕"
 description              : &description "personal description"
-url                      : https://github.com/01yzzyu
+url                      : https://01yzzyu.github.io/yzzyu.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "https://github.com/01yzzyu"
+repository               : "01yzzyu/yzzyu.github.io"
 
+
+# Site Author - The following control what appear as part of the author content on the side bar.
+#               If a field is blank the icon and link will not appear, otherwise it will be shown.
+#               Additional customization can be done by editing /_includes/author-profile.html
+author:
+  # Biographic information
+  avatar           : "profile.png"
+  name             : "Your Sidebar Name"
+  pronouns         : # example: "she/her"  
+  bio              : "Short biography for the left-hand sidebar"
+  location         : "Earth"
+  employer         : "Red Brick University"
+  uri              : # URL
+  email            : "none@example.org" 
+  
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
