--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,5 +3,5 @@ main:
   - title: "Publications"
     url: /publications/
  
-  - title: "Project"
-    url: /project/
+  - title: "Research Projects"
+    url: /projects/
