--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ author:
   avatar           : "IMG_9276.png"
   name             : "Zhongyu Yang"
   pronouns         : # example: "she/her"  
-  bio              : "Student of School of Mathematics and Statistics , Lanzhou University "
+  bio              : "Student of School of Mathematics and Statistics , Lanzhou University  \\RA in CUHKSZ"
   location         : "Lanzhou , Gansu , China"
   employer         : "Lanzhou  University"
   uri              : # URL
