--- a/_config.yml
+++ b/_config.yml
@@ -40,11 +40,11 @@ author:
   avatar           : "IMG_9276.png"
   name             : "Zhongyu Yang"
   pronouns         : # example: "she/her"  
-  bio              : "Student of School of Mathematics and Statistics , Lanzhou University && RA in SDS , CUHKSZ"
+  bio              : "Student of School of Mathematics and Statistics , LZU && Intern , KAUST"
   location         : "Lanzhou , Gansu , China"
   employer         : "Lanzhou  University"
   uri              : # URL
-  email            : "yangzhy21@lzu.edu.cn" 
+  email            : "yangzhy21@gmail.com" 
   
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
@@ -60,7 +60,7 @@ author:
   dribbble         : # Username
   github           : "01yzzyu"
   kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+  stackoverflow    : "https://www.researchgate.net/profile/Zhongyu-Yang-10"
 
   # Social media
   #bluesky          : "bsky.app" # Replace this with you Bluesky username
