--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "yangzhy21"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
